--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <h2>MY BEST SCORES</h2>
     </div>
 
-      <% if @games.empty? %>
+      <% if @games.empty? || nil %>
       <div class="let-play">
         <div class="row">
           <H2>Alors comme ça on se créé un compte et on veut pas faire sa première partie ?</H2>
