few stuff for responsive + set up devise for username only for demo

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
           <!-- </div> -->
           <!-- <div class="col-sm-6"> -->
             <div class="form-group">
-              <%= f.input :email,
+              <%#= f.input :email,
                           required: true,
                           autofocus: true ,
                           input_html: { autocomplete: "email" }%>
@@ -25,7 +25,7 @@
           <!-- </div> -->
           <!-- <div class="col-sm-6"> -->
             <div class="form-group">
-              <%= f.input :password,
+              <%#= f.input :password,
                           required: true,
                           hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                           input_html: { autocomplete: "new-password" } %>
@@ -33,7 +33,7 @@
           <!-- </div> -->
           <!-- <div class="col-sm-6"> -->
             <div class="form-group">
-              <%= f.input :password_confirmation,
+              <%#= f.input :password_confirmation,
                           required: true,
                           input_html: { autocomplete: "new-password" } %>
             </div>
