--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -1,7 +1,7 @@
 <% if browser.device.mobile? %>
-  <%= render 'mobile_show' %>
+  <%= render 'poi_mobile_show' %>
 <% else %>
-  <%= render 'desktop_show' %>
+  <%= render 'poi_desktop_show' %>
 <% end %>
 
 
