--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -10,6 +10,12 @@ function addAnswer() {
   menuScoreClosed.classList.add("open");
   menuScoreContainer.innerHTML = menuScoreHTML;
 
+  // display result box mobile
+  const menuScoreContainerMobile = document.querySelector('.m-menu-score-container');
+  const menuScoreClosedMobile = document.querySelector('.m-score-card');
+  menuScoreClosedMobile.classList.add("open");
+  menuScoreContainerMobile.innerHTML = menuScoreMobileHTML;
+
   // display correct poi marker
   new window.mapboxgl.Marker({color: "#08c299"})
     .setLngLat([ <%= @poi_marker[:lng] %>, <%= @poi_marker[:lat] %> ])
