--- a/app/views/pois/_show.html.erb
+++ b/app/views/pois/_show.html.erb
@@ -1,5 +1,5 @@
 <% if browser.device.mobile? %>
-  <%= render 'mobile_show' %>
+  <%= render 'poi_mobile_show' %>
 <% else %>
-  <%= render 'desktop_show' %>
+  <%= render 'poi_desktop_show' %>
 <% end %>
