--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,3 +1,43 @@
-<h1>Challenge#new</h1>
-<p>Find me in app/views/challenge/new.html.erb</p>
-<%= link_to "debute le challenge", game_challenge_url(@game) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
+<% content_for :meta_title, "# has challenged you on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, "Will you accept the challenge #{@game.theme.name}, #{@game.theme.city.name}? See if you can manage to beat your friend" %>
+
+<% content_for :meta_image, @theme.photo %>
+
+<div class="container container-challenge">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3  text-center">
+
+
+      <!-- checker si le jeux est un multi true -->
+      <% if @game.multi? %>
+      <h1>Challenge can you beat on the theme <%= @theme.name  %></h1>
+
+      <!-- si c'est le cas regarder si l'utilisateur est loggué -->
+      <!-- si l'utilisateur est loggé je regarde si c'est user_one -->
+      <!-- Si c'est user_one je lui dis son score actuelle et le score de user 2 et je l'envoie sur le jeux via un bouton -->
+      <!-- si c'est pas user_one je lui dis qu'elle est le score actuelle du joueur one et d'accepter la challenge -->
+      <%= link_to "Challenge Accepted", game_challenge_url(@game) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
+      <!-- checker si le jeux est un multi true -->
+      <!-- checker si le jeux est un multi true -->
+      <!-- checker si le jeux est un multi true -->
+      <!-- checker si le jeux est un multi true -->
+      <!-- checker si le jeux est un multi true -->
+
+      <% else  %>
+        <h1>Oupsy doupsy!</h1>
+        <h2> This game was not created as a challenge. </h2>
+        <p> Go back to <%= link_to "homepage", root_url %> to pick your own game or try the quizz on <%= @theme.name  %></p>
+
+         <%= link_to "Solo", theme_games_url(@theme.id , game: {multi: false}), method: :post,  class: "btn btn-pimp btn-fw text-center"   %>
+
+
+      <% end %>
+
+
+
+
+
+
+    </div>
+  </div>
+</div>
