--- a/app/views/pages/leaderboard.html.erb
+++ b/app/views/pages/leaderboard.html.erb
@@ -1,59 +1,28 @@
 <br>
 <br>
-<br>
-<br>
-<br>
 
-<!-- drop down cities -->
 
-<%= form_tag leaderboard_path, method: :get do  %>
-  <%= select_tag 'city', options_for_select(@cities.map { |city| [city.name, city.id] },
-    params[:city]),
-    placeholder: "Choose a city" %>
-    <%= select_tag 'theme', options_for_select(@themes.map { |theme| [theme.name, theme.id] },
-    params[:theme]),
-    placeholder: "Choose a theme" %>
-    <%= submit_tag(value = "View scores") %>
-<% end %>
+<h1 class= 'text-center'>Leaderboard</h1>
 
-<!-- leaderboard: headers + list  -->
-<!-- headers -->
-<div class="container container-center container-background">
+<!-- city tabs: only Paris for Demo Day -->
+<h2>Paris</h2>
 
-  <div class="row">
-    <div class="col-xs-3 border-column take-space text-center">
-      <h1>Rank</h1>
+<!-- theme tabs -->
+<ul class="nav nav-tabs" role="tablist">
+  <% @themes.each do |theme| %>
+    <li role="presentation" class="<%= 'active' if theme == @themes.first %>">
+      <a href="#theme-<%= theme.id %>" aria-controls="<%= theme.id %>" role="tab" data-toggle="tab">
+        <%= theme.name %></a>
+    </li>
+  <% end %>
+</ul>
+
+<!-- bootstrap js content -->
+<div class="tab-content">
+  <% @games.each do |theme_id, games| %>
+    <div class="tab-pane <%= 'active' if theme_id == @themes.first.id %>" id="theme-<%= theme_id %>" role="tabpanel" aria-labelledby="<%= theme_id %>-tab">
+      <%= render "leaderboard_theme", games: games %>
     </div>
-    <div class="col-xs-3 border-column take-space text-center">
-      <h1>Username</h1>
-    </div>
-    <div class="col-xs-3 border-column take-space text-center">
-      <h1></h1>
-    </div>
-    <div class="col-xs-3 border-column take-space text-center">
-      <h1>Score</h1>
-    </div>
-  </div>
-
-<!-- list -->
-    <%  @games.each_with_index do |game, index| %>
-      <% unless game.score_one.nil?  %>
-        <div class="row vertical-center">
-          <div class="col-xs-3 border-column take-space">
-            <p><%= "#{index + 1}" %></p>
-          </div>
-          <div class="col-xs-3 border-column take-space">
-            <p><%= game.winner.username %></p>
-          </div>
-          <div class="col-xs-3 border-column take-space">
-            <img class="picture-leaderboard" src="<%= cl_image_path game.winner.photo %>">
-          </div>
-          <div class="col-xs-3 border-column take-space">
-            <p><%= game.score %></p>
-          </div>
-        </div>
-
-      <% end %>
-    <% end %>
+  <% end %>
 </div>
 
