menu mobile ok + début de responsive show poi

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 @import "leaderboard";
 @import "modal";
 @import "navbar";
+@import "navbar_mobile";
 @import "wrapper_map";
 @import "score_card";
 @import "map";
