manifest json fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
     <link rel="shortcut icon" type="image/png" href="<%= asset_path 'favicon.png' %>" />
-    <link rel="manifest" href="<%= asset_path 'manifest.json.erb' %>">
+    <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
   </head>
