--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -99,7 +99,9 @@
           </div>
           <div class="row">
             <div class="col-12-sm text-center">
-              <button class="btn btn-primary" id="fb" href="#">Share on Facebook</button>
+              <!-- bouton facebook qui ne marche pas <button class="btn btn-primary" id="fb" href="#">Share on Facebook</button> -->
+              <br>
+              <a href="" class="btn btn-primary" id="yourGame">Start your game</a>
             </div>
           </div>
         </div>
