--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -86,8 +86,8 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <%= image_tag(("close.svg"), class: "btn-close-home") %>
           </button>
-          <h1 class="modal-title text-center">Challenge ton ami(e)</h1>
-          <p class="text-center">Envoie ce lien</p>
+          <h1 class="modal-title text-center">Challenge your friend </h1>
+          <p class="text-center">Copy and share the link below</p>
           <div class="row">
             <div class="col-12-sm offset-3-sm">
               <form class="form-inline text-center">
