--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
       <% if @games.empty? || nil %>
       <div class="let-play">
         <div class="row">
-          <H2>Alors comme ça on se créé un compte et on veut pas faire sa première partie ?</H2>
+          <H2>So just like that... you create an account and you don't even play a game</H2>
         </div>
       </div>
       <div class="let-play">
