--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <meta property="og:type" content="game">
     <meta property="og:title" content="Mind the Map: the first geography game on a city-level!">
     <meta property="og:description" content="Challenge your friends to see who knows the city best.">
+    <meta property="og:image" content="<%= image_url "mindthemap.jpg" %>" >
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Mind the Map">
