--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
 
     <!-- Social networks OG -->
-    <meta property="og:type" content="game">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.mindthemapgame.com/">
+
     <meta property="og:title" content="Mind the Map: the first geography game on a city-level!">
     <meta property="og:description" content="Challenge your friends to see who knows the city best.">
     <meta property="og:image" content="<%= image_url "mindthemap.jpg" %>" >
